🛠️chore : menu service 수정
피드백 반영해 코드 수정!